@@ -98,7 +98,7 @@ class Smarty_Internal_Config_File_Compiler {
             // output parser error message
             $error_text .= ' - Unexpected "' . $this->lex->value . '", expected one of: ' . implode(' , ', $expect);
         } 
-        throw new Exception($error_text);
+        throw new SmartyCompilerException($error_text);
     } 
 } 
 
