@@ -287,7 +287,7 @@ class Smarty_Internal_Data {
             return $this->smarty->global_tpl_vars[$variable];
         } 
         if ($this->smarty->error_unassigned && $error_enable) {
-            throw new Exception('Undefined Smarty variable "' . $variable . '"');
+            throw new SmartyException('Undefined Smarty variable "' . $variable . '"');
         } else {
             return new Undefined_Smarty_Variable;
         } 
@@ -310,7 +310,7 @@ class Smarty_Internal_Data {
             $_ptr = $_ptr->parent;
         } 
         if ($this->smarty->error_unassigned) {
-            throw new Exception('Undefined config variable "' . $variable . '"');
+            throw new SmartyException('Undefined config variable "' . $variable . '"');
         } else {
             return '';
         } 
@@ -333,7 +333,7 @@ class Smarty_Internal_Data {
         } 
 
         if ($this->smarty->$error_unassigned) {
-            throw new Exception('Undefined stream variable "' . $variable . '"');
+            throw new SmartyException('Undefined stream variable "' . $variable . '"');
         } else {
             return '';
         } 
@@ -407,7 +407,7 @@ class Smarty_Data extends Smarty_Internal_Data {
                 $this->tpl_vars[$_key] = new Smarty_variable($_val);
             } 
         } elseif ($_parent != null) {
-            throw new Exception("Wrong type for template variables");
+            throw new SmartyException("Wrong type for template variables");
         } 
     } 
 } 
