@@ -31,7 +31,7 @@ class Smarty_Internal_Write_File {
 
         if (!file_put_contents($_tmp_file, $_contents)) {
             umask($old_umask);
-            throw new Exception("unable to write file {$_tmp_file}");
+            throw new SmartyException("unable to write file {$_tmp_file}");
             return false;
         } 
         // remove original file
